--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1 style="">Hello World</h1>
+    <a
+      href="#"
+      class="group block max-w-xs mx-auto rounded-lg p-6 bg-whitering-1 ring-slate-900/5 shadow-lg space-y-3 hover:bg-sky-500 hover:ring-sky-500"
+    >
+      <div class="flex items-center space-x-3">
+        <svg
+          class="h-6 w-6 stroke-sky-500 group-hover:stroke-white"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <!-- ... -->
+        </svg>
+        <h3 class="text-slate-900 group-hover:text-white text-sm font-semibold">
+          New project
+        </h3>
+      </div>
+      <p class="text-slate-500 group-hover:text-white text-sm">
+        Create a new project from a variety of starting templates.
+      </p>
+    </a>
   </body>
 </html>
